Added validation for ShipPositionRequest.